<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="1dp"
    app:cardCornerRadius="5dp"
    app:strokeColor="@color/gray"
    app:strokeWidth="1dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="5dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_inersia"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_inersia"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/iv_inersia"
            app:layout_constraintTop_toBottomOf="@+id/iv_inersia" />

        <TextView
            android:id="@+id/tv_formula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/tv_formula"
            app:layout_constraintEnd_toEndOf="@+id/iv_inersia"
            app:layout_constraintStart_toStartOf="@+id/iv_inersia"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />


        <Button
            android:id="@+id/btn_calculate"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_calculate"
            app:layout_constraintEnd_toEndOf="@+id/tv_formula"
            app:layout_constraintStart_toStartOf="@+id/tv_formula"
            app:layout_constraintTop_toBottomOf="@+id/tv_formula" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>